# Huffman_Compressor

./: .gitignore  CMakeLists.txt  compress_test  compressed_dir.huf  issues.md  test.huff  test.txt
.github/workflows/: cmake-multi-platform.yml
_codeql_build_dir/: directory_test
build-clang/: directory_test
lib/: compress.c  compress.h  data_types.h  debugmalloc.h  decompress.c  decompress.h  directory.c  directory.h  file.c  file.h  huffman.c  huffman.h  util.c  util.h
src/: main.c
tests/: .serialized.tmp  test_compress.c  test_compress_decompress.c  test_directory.c  test_file_io.c
